# VeeamazingTool

./: CMakeLists.txt  Configuration.cpp  Configuration.h  FileBlocksStream.cpp  FileBlocksStream.h  FileDevice.cpp  FileDevice.h  IBlockDevice.h  IBlocksStream.h  README.md  SignatureFile.cpp  SignatureFile.h  SimpleBlocksStream.h  Worker.cpp  Worker.h  main.cpp
